k8s/db/pg-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-admin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-admin
  template:
    metadata:
      labels:
        component: postgres-admin
    spec:
      containers:
        - name: psq-admin
          image: dpage/pgadmin4
          ports:
            - containerPort: 5050
