k8s/db/pg-admin-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-admin-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: postgres-admin
  ports:
    - port: 5050
      targetPort: 5050
